call-center/src/objects/Adjustment__c.object
<CustomObject>
    <description>Metadata about Adjustments</description>
    <fields>
        <fullName>Aggregate_Id__c</fullName>
        <description>Composite key: External Guarantor Id, Post Date, Payor</description>
        <externalId>true</externalId>
        <label>Aggregate ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <formula>IF(OR(ISBLANK(Payor__c), Payor__r.Name == &quot;Patient&quot;), &quot;&quot;, Payor__r.Name &amp; &quot; &quot;) &amp;
            &apos;Adjustment - &apos; &amp;
            TEXT(MONTH(Post_Date__c)) &amp; &quot;/&quot; &amp;
            TEXT(DAY(Post_Date__c)) &amp; &quot;/&quot; &amp;
            TEXT(YEAR(Post_Date__c))</formula>
        <label>Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Guarantor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>External Guarantor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>External Guarantor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Adjustments (External Guarantor)</relationshipLabel>
        <relationshipName>AdjustmentsExtGT</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Guarantor__c</fullName>
        <label>Guarantor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Guarantor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Adjustments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payor</label>
        <referenceTo>Payor__c</referenceTo>
        <relationshipName>Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Date__c</fullName>
        <label>Post Date</label>
        <type>Date</type>
    </fields>
    <label>Adjustment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ADJ-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>